--- a/ExpandedSearchInfo/ExpandedSearchInfo.yaml
+++ b/ExpandedSearchInfo/ExpandedSearchInfo.yaml
@@ -1,5 +1,6 @@
 ﻿author: ascclemens
 name: Expanded Search Info
+punchline: Displays extra information pulled from search info when examining.
 description: |-
   Displays extra information pulled from search info when examining.
 
@@ -12,4 +13,6 @@ description: |-
 
   Simply examine someone with a search info containing pointers to one of
   these locations and the plugin will display information automatically.
+
+  Icon: expand by Gregor Cresnar from the Noun Project
 repo_url: https://git.sr.ht/~jkcclemens/ExpandedSearchInfo
