--- a/ExpandedSearchInfo/ExpandedSearchInfo.yaml
+++ b/ExpandedSearchInfo/ExpandedSearchInfo.yaml
@@ -16,3 +16,4 @@ description: |-
 
   Icon: expand by Gregor Cresnar from the Noun Project
 repo_url: https://git.sr.ht/~jkcclemens/ExpandedSearchInfo
+dalamud_api_level: 7
