--- a/ExpandedSearchInfo/ExpandedSearchInfo.csproj
+++ b/ExpandedSearchInfo/ExpandedSearchInfo.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6-windows</TargetFramework>
+        <TargetFramework>net7-windows</TargetFramework>
         <Version>1.3.10</Version>
         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
@@ -47,8 +47,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="AngleSharp" Version="1.0.0-alpha-844"/>
-        <PackageReference Include="DalamudPackager" Version="2.1.8"/>
+        <PackageReference Include="AngleSharp" Version="1.0.1"/>
+        <PackageReference Include="DalamudPackager" Version="2.1.11"/>
         <PackageReference Include="Nager.PublicSuffix" Version="2.4.0"/>
     </ItemGroup>
 
