--- a/ExpandedSearchInfo/ExpandedSearchInfo.csproj
+++ b/ExpandedSearchInfo/ExpandedSearchInfo.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net7-windows</TargetFramework>
@@ -50,6 +50,14 @@
         <PackageReference Include="AngleSharp" Version="1.0.4" />
         <PackageReference Include="DalamudPackager" Version="2.1.12" />
         <PackageReference Include="Nager.PublicSuffix" Version="2.4.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EditorConfigFiles Remove=".editorconfig" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Include=".editorconfig" />
     </ItemGroup>
 
 </Project>
