--- a/ExpandedSearchInfo/ExpandedSearchInfo.csproj
+++ b/ExpandedSearchInfo/ExpandedSearchInfo.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net7-windows</TargetFramework>
-        <Version>1.3.14</Version>
+        <TargetFramework>net8.0-windows7.0</TargetFramework>
+        <Version>1.4.0</Version>
         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -48,7 +48,7 @@
 
     <ItemGroup>
         <PackageReference Include="AngleSharp" Version="1.0.4" />
-        <PackageReference Include="DalamudPackager" Version="2.1.12" />
+        <PackageReference Include="DalamudPackager" Version="2.1.13" />
         <PackageReference Include="Nager.PublicSuffix" Version="2.4.0" />
     </ItemGroup>
 
