update plugin manifest

--- a/ExpandedSearchInfo/ExpandedSearchInfo.yaml
+++ b/ExpandedSearchInfo/ExpandedSearchInfo.yaml
@@ -1,4 +1,4 @@
-﻿author: Anna
+﻿author: Anna, Caitlyn
 name: Expanded Search Info
 punchline: Displays extra information pulled from search info when examining.
 description: |-
