update repo URL in manifest

--- a/ExpandedSearchInfo/ExpandedSearchInfo.yaml
+++ b/ExpandedSearchInfo/ExpandedSearchInfo.yaml
@@ -17,4 +17,4 @@ description: |-
   Credit to Anna for the original plugin.
 
   Icon: expand by Gregor Cresnar from the Noun Project
-repo_url: https://git.anna.lgbt/anna/ExpandedSearchInfo
+repo_url: https://github.com/caitlyn-gg/ExpandedSearchInfo
