add Anna back to author prop in manifest
Previously removed as I was unsure if the previous conflict was due to the author field or owners field in the D17 manifest.

--- a/ExpandedSearchInfo/ExpandedSearchInfo.yaml
+++ b/ExpandedSearchInfo/ExpandedSearchInfo.yaml
@@ -1,4 +1,4 @@
-﻿author: caitlyn-gg
+﻿author: Caitlyn, Anna
 name: Expanded Search Info
 punchline: Displays extra information pulled from search info when examining.
 description: |-
